# wgpu-matrix-simple

./: Cargo.toml  LICENSE  README.md  index.html
src/: main.rs  matrix_multiply.wgsl
