[package]
name = "wgpu-matrix-simple"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.0", features = ["derive"] }
log = "0.4.27"
wgpu = "25.0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
tokio = { version = "1.45.1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
futures-channel = "0.3.31"
